Jenkinsify scm and url. Upgraded parent pom version.

--- a/src/main/java/hudson/plugins/jsgames/package.html
+++ b/src/main/java/hudson/plugins/jsgames/package.html
@@ -28,7 +28,7 @@
 </head>
 <body bgcolor="white">
 
-Provides classes for <a href="http://wiki.hudson-ci.org/display/HUDSON/JSGames+Plugin">JSGames Plugin</a>.
+Provides classes for <a href="http://wiki.jenkins-ci.org/display/JENKINS/JSGames+Plugin">JSGames Plugin</a>.
 
 </body>
 </html>
